# ArkEngine

./: CMakeLists.txt  imgui.ini  revision.h.in  style.txt
include/: ArkEngine.hpp  Camera.hpp  Cube.hpp  Level.hpp  Mesh.hpp  Plane.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  UI.hpp  Window.hpp
include/core/: ArkEngine.hpp  Camera.hpp  ProjectManager.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  UI.hpp  Window.hpp
include/objects/: Cube.hpp  DirectionalLight.hpp  GameObject.hpp  Level.hpp  Light.hpp  Mesh.hpp  MeshNew.hpp  Model.hpp  Plane.hpp  PointLight.hpp  Shapes.hpp
inlcude/: Cube.hpp  Mesh.hpp  Render.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Window.hpp
shaders/: StandardLit.frag  WorldGrid.frag  WorldGrid.vert  firstFrag.frag  firstVert.vert  lightFrag.frag  lit.frag  lit.vert  unlit.frag  unlit.vert
src/: ArkEngine.cpp  Camera.cpp  Cube.cpp  Level.cpp  Mesh.cpp  Render.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  UI.cpp  Window.cpp  Window.hpp  main.cpp
src/core/: ArkEngine.cpp  Camera.cpp  Object.cpp  ProjectManager.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  UI.cpp  Window.cpp
src/objects/: Level.cpp  Light.cpp  Mesh.cpp  MeshNew.cpp  Model.cpp
